--- a/DataScienceWiki/JupyterLabCheatSheet.ipynb
+++ b/DataScienceWiki/JupyterLabCheatSheet.ipynb
@@ -33,11 +33,12 @@
    ]
   },
   {
-   "cell_type": "code",
-   "execution_count": null,
+   "cell_type": "markdown",
    "metadata": {},
-   "outputs": [],
-   "source": []
+   "source": [
+    "- tab -- autofill\n",
+    "- shift+tab -- function suggestion"
+   ]
   },
   {
    "cell_type": "code",
@@ -78,7 +79,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.6.4"
+   "version": "3.7.1"
   }
  },
  "nbformat": 4,
